# in5050-ass1

./: .gitignore  .gitmodules  README.org
docs/: .gitignore  tips_and_tricks.md
docs/design/: data_flow_c63.eps  design_doc.latex  mybib.bib
project/: .clangd  .editorconfig  CMakeLists.txt  Makefile  cuda-toolchain.cmake  fedora-toolchain.cmake  in5050-toolchain.cmake  install.sh  run.sh
project/include/: c63.h  common.h  quantdct.h
project/src/: c63_write.cu  c63dec.c  c63dec.cu  c63enc.cu  common.c  common.cu  io.cu  me.cu  quantdct.cu  tables.cu
